<resources>
    <string name="app_name">Instagram</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="take_picture">Take Picture</string>
    <string name="description">Description.....</string>
    <string name="sign_up">Sign up</string>
    <string name="home">Home</string>
    <string name="add_post">Post</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="options">Options</string>
    <string name="logout">Logout</string>
</resources>